# latcarf

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
res/: IDL_CB-Pastel1.frag  IDL_Waves.frag  mandelbrot.frag  mandelbrot.vert
src/: glium_sdl2.rs  main.rs  text_rendering.rs
