[package]
name = "latcarf"
version = "0.1.0"
edition = "2021"

[dependencies]
sdl2 = { version = "0.37.0", default-features = false, features = ["gfx"] }
itertools = "0.8.2"
glium = "0.35.0"
clap = { version="4.5.16", features=["derive"] }
# font-kit = "0.14.2"
font-kit = { path = "/home/leon/Projects/font-kit" }
pathfinder_geometry = "0.5.1"
log = "0.4.22"
env_logger = "0.11.5"
image = "0.25.2"
freetype-sys = "0.20"
